[gd_scene load_steps=12 format=3 uid="uid://da78usjsogdm8"]

[ext_resource type="Shader" uid="uid://btrovsif32dki" path="res://Shaders/UIBounce.tres" id="1_7fapu"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_ko0db"]
[ext_resource type="Texture2D" uid="uid://cap817tixtyyy" path="res://Visual Assets/Sprites/Characters/Enemy.png" id="2_7mlmr"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_y65c1"]
[ext_resource type="Script" path="res://Scripts/EnemyIdle.gd" id="5_y2kiy"]
[ext_resource type="Script" path="res://Scripts/EnemyFollow.gd" id="6_jbd5b"]
[ext_resource type="Script" path="res://Scripts/EnemyRush.gd" id="7_m0nnv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5n0wg"]
shader = ExtResource("1_7fapu")

[sub_resource type="CircleShape2D" id="CircleShape2D_jkyod"]
radius = 6.0

[sub_resource type="Gradient" id="Gradient_45yr6"]
offsets = PackedFloat32Array(0.129534, 1)
colors = PackedColorArray(0.603922, 0.921569, 0.639216, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2ovvy"]
gradient = SubResource("Gradient_45yr6")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ko0db")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5n0wg")
texture = ExtResource("2_7mlmr")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jkyod")

[node name="CanFollowCheck" type="RayCast2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.1
texture = SubResource("GradientTexture2D_2ovvy")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initState")]
script = ExtResource("3_y65c1")
initState = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "rayCast")]
script = ExtResource("5_y2kiy")
enemy = NodePath("../..")
rayCast = NodePath("../../CanFollowCheck")
speed = 10.0

[node name="EnemyFollow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "rayCast")]
script = ExtResource("6_jbd5b")
enemy = NodePath("../..")
rayCast = NodePath("../../CanFollowCheck")
speed = 40

[node name="EnemyRush" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_m0nnv")
enemy = NodePath("../..")
speed = 150
